# scooter-display

./: .dir-locals.el  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  devenv.nix  justfile  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: adc.rs  allocator.rs  averager.rs  bluetooth.rs  bluetooth_proto.rs  buttons.rs  buttons_proto.rs  can.rs  can_proto.rs  cfg.rs  display.rs  framed_reader.rs  lib.rs  main.rs  no_inline_future.rs  noodle.rs  operation.rs  pin_digit.rs  platform.rs  rtc.rs  scram.rs  slint.rs  state.rs  system_state.rs  time_driver.rs  ui.rs
src/sim/: mod.rs
src/ui/: colour.rs  engine.rs  firmware.rs  font.rs  keys.rs  state.rs  view.rs
src/ui/colour/: theme.rs
src/ui/view/: home.rs  info.rs  locked.rs  settings.rs
ui/: common.slint  main.slint
