cargo-features = ["panic-immediate-abort"]

[package]
name = "scooter-display"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "scooter_display"
path = "src/main.rs"
test = false

[dependencies]
# at32f4xx-hal = { path = "../at32f4xx-hal", features = ["at32f415", "defmt"] }
at32f4xx-hal = { git = "https://github.com/simmsb/at32f4xx-hal", features = ["at32f415", "defmt"], optional = true }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"], optional = true }
# defmt-rtt = { version = "1.1.0", features = ["disable-blocking-mode"] }
defmt-rtt = { version = "1.2.0", features = [] }
panic-probe = { version = "1.0.0", features = ["defmt", "print-defmt"], optional = true }
defmt = "1.1.0"
cortex-m = { version = "0.7.7", features = ["inline-asm", "linker-plugin-lto", "critical-section-single-core"], optional = true }
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embassy-time-driver = { version = "0.2.2" }
embassy-sync = "0.8.0"
embassy-time-queue-utils = "0.3.2"
critical-section = "1.2.0"
fugit = "0.4.0"
embassy-executor = { version = "0.10.0", features = ["defmt", "platform-cortex-m", "executor-thread", "executor-interrupt", "embassy-time-driver"] }
static_cell = "2.1.1"
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_000"] }
# buoyant = { path = "../buoyant", features = ["glyphr"] }
buoyant = { git = "https://github.com/simmsb/buoyant", version = "0.7.0-alpha.3", branch = "simmsb/buoyant-with-diffing" }
# buoyant = { git = "https://github.com/riley-williams/buoyant", version = "0.7.0-alpha.3", branch = "charts" }
heapless = { version = "0.9.3", features = ["defmt"] }
glyphr = { version = "0.5.1", default-features = false, git = "https://github.com/simmsb/glyphr" }
embedded-io-async = "0.7.0"
embedded-hal-nb = "1.0.0"
crc = "3.4.0"
deku = { version = "0.20.3", default-features = false, features = ["bits"] }
embassy-futures = "0.1.2"
chrono = { version = "0.4.44", default-features = false, features = ["defmt"] }
no-std-moving-average = "0.3.0"
panic-reset = { version = "0.1.1", optional = true }
butt-head = { version = "0.2.0", features = ["defmt"] }
rotate-enum = "0.1.2"

[features]
test = ["deku/descriptive-errors"]
app = ["dep:cortex-m-rt", "dep:cortex-m", "dep:at32f4xx-hal"]
default = ["app", "panic-probe"]
panic-probe = ["dep:panic-probe"]

# panic handler which sends immobiliser canbus messages and then resets.
panic-scram = []

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy" }
embassy-executor-timer-queue = { git = "https://github.com/embassy-rs/embassy" }

#[patch."https://github.com/simmsb/glyphr"]
#glyphr-macros = { path = "../glyphr/glyphr-macros" }
#glyphr = { path = "../glyphr/glyphr" }

# [patch."https://github.com/simmsb/at32f4xx-hal"]
# at32f4xx-hal = { path = "../at32f4xx-hal" }

# [patch."https://github.com/simmsb/at32f4xx-pac"]
# at32f4xx-pac = { path = "../at32f4xx-pac" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'thin' # true/fat breaks defmt?
opt-level = 's'
overflow-checks = true
# panic = 'unwind'
# panic = 'immediate-abort'
panic = 'abort'

# This is probably just placebo as these libs all work off traits
[profile.release.package."buoyant"]
opt-level = 3

[profile.release.package."glyphr"]
opt-level = 3

[profile.release.package."deku"]
opt-level = 3

[profile.release.package."embedded-graphics"]
opt-level = 3

[profile.release.package."mipidsi"]
opt-level = 3

[build-dependencies]
build_script_file_gen = "0.6.1"
material-colors = { git = "https://github.com/Aiving/material-colors", version = "0.5.0" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false
# panic = 'abort'
panic = 'immediate-abort'

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "--sort-modules-by-appearance"]
